# AmberFD

./: .gitignore  .gitignore.save  CMakeLists.txt  CmakeLists.txt.back  OpenBLASConfig.cmake  README.md
AmberFD/: AmberFD.py  LJOverrides.py  PDBReporter.py  __init__.py
AmberFD/devTools/: MultiCheckpointReporter.py
AmberPolarization/: AmberPolarization.py  LJOverrides.py  Minimizer  PDBReporter.py  residues.xml  tmp
AmberPolarization/devTools/: PDBCrashReporter.py
docs/source/: AmberFD.AmberFD.rst  AmberFD.rst  conf.py  index.rst  modules.rst
docs/source/_templates/: my_class.rst
include/: AmberFD.h  AmberFD.i  DispersionPauli.h  DispersionPauli.i  Energies.h  FlucDens.h  FlucDens.i  FlucDens2.i  LinearSolvers.h  Vec3.h  common.h  timer.h
python/: AmberFluc.py  AmberPolarization.py  chen-garcia.xml
src/: AmberFD.cpp  DispersionPauli.cpp  FlucDens.cpp  LinearSolvers.cpp  common.cpp  timer.cpp
tests/: AssertEqual.py  CMakeLists.txt  test_AmberFD.py  test_UU_energy.cpp  test_UU_energy.py  test_disp_energy.py  test_energies.py  test_fluc_terms.cpp  test_forces.py  test_swig_import.py
tests/data/: create_data.py  u1.xyz  u2.xyz  u_disp_pauli_params.txt  u_u.chg  u_u.xyz  u_u_data.txt  u_u_data_2.txt  u_u_disp_forces_1.txt  u_u_disp_forces_2.txt  u_u_fluc_forces_1.txt  u_u_fluc_forces_2.txt  u_u_forces.txt  u_u_total_forces_1.txt  u_u_total_forces_2.txt
tests/include/: arrerts.h  asserts.h  fileReader.cpp.back  fileReader.h  fileReader.h.back
tests/old_data/: u1.xyz  u_disp_pauli_params.txt  u_u_data.txt
